2000-07-10  Alexander Aganichev  <AAganichev@hypercom.com>

	* archures.c (bfd_default_scan): Add set of bfd_mach_ cases for
	compatibility with older binutils.

2000-07-10  Alan Modra  <alan@linuxcare.com.au>

	* section.c (bfd_make_section_anyway): Start section_id at 0x10.
	(STD_SECTION): Avoid negative ids, instead use 0 to 3.

	From Ryan Bradetich  <rbradetich@uswest.net>
	* dwarf1.c (parse_die): Cure signed/unsigned char warnings.
	(parse_line_table): Ditto.
	(_bfd_dwarf1_find_nearest_line): Ditto.
	* syms.c (cmpindexentry): Remove extra `*' from params.

2000-07-09  Koundinya K  <kk@ddeorg.soft.net>

        * elf32-mips.c (sort_dynamic_relocs): New Function.
        (_bfd_mips_elf_finish_dynamic_sections): Call sort_dynamic_relocs
	via qsort to sort the dynamic relocations in increasing r_symndx
	value.
	
2000-07-09  Alan Modra  <alan@linuxcare.com.au>

	* elf64-hppa.c (elf64_hppa_dyn_hash_table_init): Add
	ATTRIBUTE_UNUSED to unused args.
	(get_opd): Likewise.
	(get_plt): Likewise.
	(get_dlt): Likewise.
	(get_stub): Likewise.
	(elf64_hppa_adjust_dynamic_symbol): Likewise.
	(elf64_hppa_link_output_symbol_hook): Likewise.
	(elf64_hppa_check_relocs): Delete unused var.
	(elf64_hppa_size_dynamic_sections): Likewise.
	(elf64_hppa_finalize_opd): Likewise.
	(elf64_hppa_finalize_dynreloc): Likewise.
	(elf64_hppa_modify_segment_map): Likewise.
	(elf64_hppa_finish_dynamic_sections): Likewise.

	* elf-hppa.h (elf_hppa_final_write_processing): Add
	ATTRIBUTE_UNUSED to unused args.
	(elf_hppa_final_link_relocate): Likewise.
	(elf_hppa_record_segment_addrs): Add paretheses.
	(elf_hppa_relocate_section): Constify dyn_name.

	From  David Huggins-Daines  <dhd@linuxcare.com>
	* config.bfd: Add hppa*64*-*-linux-gnu 64-bit target, and
	rearrange case statement so that it gets preferred to 32-bit ones.

	* elf32-hppa.c (elf32_hppa_bfd_final_link_relocate): Use
	asection->id instead of address of asection structure.
	(elf32_hppa_size_stubs): Likewise.
